ci: Add read permissions for contents and pull requests to typo-check and tests-services jobs.

--- a/.github/workflows/test-pipeline.yml
+++ b/.github/workflows/test-pipeline.yml
@@ -21,7 +21,14 @@ jobs:
 
   typo-check:
     uses: ./.github/workflows/_typo-check.yml
+    permissions:
+      contents: read
+      pull-requests: read
 
   tests-services:
     uses: ./.github/workflows/_run-tests.yml
+    permissions:
+      contents: read
+      pull-requests: read
+      
 
