--- a/.github/workflows/_run-tests.yml
+++ b/.github/workflows/_run-tests.yml
@@ -51,5 +51,8 @@ jobs:
       - name: Install Dependencies
         run: pnpm install --frozen-lockfile
 
+      - name: Build Workspace Packages
+        run: pnpm run build
+
       - name: Run Tests
         run: pnpm run test
