--- a/functions/oracle-updater/package.json
+++ b/functions/oracle-updater/package.json
@@ -5,8 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsup src/index.ts",
-    "bundle": "esbuild src/index.ts --bundle --platform=node --target=node22 --outfile=dist/index.js",
-    "test": "bun test"
+    "bundle": "esbuild src/index.ts --bundle --platform=node --target=node22 --outfile=dist/index.js"
   },
   "dependencies": {
     "@local-packages/common-utils": "workspace:*",
