refactor: move service wrappers to aws-wrappers directory and update build artifacts

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -4,11 +4,9 @@ trustPolicy: no-downgrade
 
 packages:
   - services/*
-  - wrappers/*
+  - aws-wrappers/*
   - packages/*
-  # Legacy directories - to be removed after migration verified
-  - containers/*
-  - functions/*
+
 onlyBuiltDependencies:
   - esbuild
   - secp256k1
