--- a/.github/workflows/_run-tests.yml
+++ b/.github/workflows/_run-tests.yml
@@ -6,11 +6,11 @@ on:
       node-version:
         required: false
         type: string
-        default: '20'
+        default: '22'
       bun-version:
         required: false
         type: string
-        default: 1.2.13
+        default: '1.2.13'
 
 permissions:
   contents: read
@@ -22,37 +22,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Setup Node
-        uses: actions/setup-node@v4
+      - name: Setup Workspace
+        uses: ./.github/actions/setup-workspace
         with:
           node-version: ${{ inputs.node-version }}
-
-      - name: Setup Bun
-        uses: oven-sh/setup-bun@v2
-        with:
           bun-version: ${{ inputs.bun-version }}
-
-      - name: Enable Corepack & Setup PNPM
-        run: corepack enable && corepack prepare pnpm@latest --activate
-
-      - name: Get PNPM store directory
-        id: pnpm-cache
-        shell: bash
-        run: echo "STORE_PATH=$(pnpm store path)" >> $GITHUB_OUTPUT
-
-      - name: Setup PNPM cache
-        uses: actions/cache@v4
-        with:
-          path: ${{ steps.pnpm-cache.outputs.STORE_PATH }}
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-store-
-
-      - name: Install Dependencies
-        run: pnpm install --frozen-lockfile
-
-      - name: Build Workspace Packages
-        run: pnpm run build
 
       - name: Run Tests
         run: pnpm run test
