feat: Refactor CI/CD deployment pipeline to use a matrix strategy for dynamic builds and deployments.

--- a/.github/workflows/_deploy-lambda.yml
+++ b/.github/workflows/_deploy-lambda.yml
@@ -23,7 +23,7 @@ on:
       bun-version:
         required: false
         type: string
-        default: '1.2.13'
+        default: 1.2.13
         description: Bun version
       aws-region:
         required: false
