--- a/.github/workflows/_run-tests.yml
+++ b/.github/workflows/_run-tests.yml
@@ -10,7 +10,7 @@ on:
       bun-version:
         required: false
         type: string
-        default: '1.2.13'
+        default: 1.2.13
 
 permissions:
   contents: read
