--- a/.github/workflows/_build-and-push-containers.yml
+++ b/.github/workflows/_build-and-push-containers.yml
@@ -27,7 +27,7 @@ on:
       bun-version:
         required: false
         type: string
-        default: '1.2.13'
+        default: 1.2.13
 
 permissions:
   id-token: write
