--- a/packages/common-utils/package.json
+++ b/packages/common-utils/package.json
@@ -15,7 +15,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsup src/index.ts"
+    "build": "tsup"
   },
   "dependencies": {
     "@aws-sdk/client-ssm": "^3.958.0",
