--- a/services/price-updater/package.json
+++ b/services/price-updater/package.json
@@ -13,7 +13,7 @@
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsup src/index.ts --format cjs,esm --dts",
+    "build": "tsup",
     "test": "bun test"
   },
   "dependencies": {
