--- a/.github/workflows/deployement-pipeline.yml
+++ b/.github/workflows/deployement-pipeline.yml
@@ -14,99 +14,115 @@ permissions:
   id-token: write
   contents: read
 
-env:
-  NODE_VERSION: '22'
-  BUN_VERSION: 1.2.13
-  AWS_REGION: us-east-1
-
 concurrency:
   group: deploy-${{ github.ref }}
   cancel-in-progress: false
 
 jobs:
-  typo-check:
-    uses: ./.github/workflows/_typo-check.yml
-
-  tests:
-    uses: ./.github/workflows/_run-tests.yml
-
-  # Generate deployment matrices based on changed files
-  generate-matrix:
+  # Set environment based on branch
+  setup:
     runs-on: ubuntu-latest
     outputs:
-      lambdas: ${{ steps.matrix.outputs.lambdas }}
-      containers: ${{ steps.matrix.outputs.containers }}
-      has-lambdas: ${{ steps.matrix.outputs.has-lambdas }}
-      has-containers: ${{ steps.matrix.outputs.has-containers }}
       environment: ${{ steps.env.outputs.name }}
     steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 2
-
-      - name: Generate Deploy Matrix
-        id: matrix
-        uses: ./.github/actions/generate-deploy-matrix
-
       - name: Select Environment
         id: env
         run: |
           if [ -n "${{ github.event.inputs.environment }}" ]; then
             env_name="${{ github.event.inputs.environment }}"
             if [[ "$env_name" != "mainnet" && "$env_name" != "stokenet" ]]; then
-              echo "Error: Invalid environment input '$env_name'. Must be 'mainnet' or 'stokenet'." >&2
+              echo "Error: Invalid environment '$env_name'" >&2
               exit 1
             fi
           else
-            branch_name="${{ github.ref_name }}"
-            case "$branch_name" in
+            case "${{ github.ref_name }}" in
               main) env_name="mainnet" ;;
               stage) env_name="stokenet" ;;
-              *) echo "Unsupported branch: ${branch_name}" >&2; exit 1 ;;
+              *) echo "Unsupported branch" >&2; exit 1 ;;
             esac
           fi
           echo "name=${env_name}" >> "$GITHUB_OUTPUT"
 
-  # Build containers using matrix
-  build-containers:
-    needs: [generate-matrix, tests]
-    if: needs.generate-matrix.outputs.has-containers == 'true' && (needs.tests.result == 'success' || needs.tests.result == 'skipped')
-    strategy:
-      fail-fast: false
-      matrix:
-        service: ${{ fromJSON(needs.generate-matrix.outputs.containers) }}
-    uses: ./.github/workflows/_build-and-push-containers.yml
-    with:
-      wrapper-name: ${{ matrix.service.wrapper }}
-      image-tag: ${{ github.sha }}
-    secrets:
-      AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
+  # Build and test all affected packages
+  build-and-test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 2
 
-  # Deploy containers using matrix
-  deploy-containers:
-    needs: [generate-matrix, build-containers]
-    if: always() && needs.build-containers.result == 'success'
-    strategy:
-      fail-fast: false
-      matrix:
-        service: ${{ fromJSON(needs.generate-matrix.outputs.containers) }}
-    uses: ./.github/workflows/_deploy-service.yml
-    secrets: inherit
-    with:
-      service_name: weft-${{ needs.generate-matrix.outputs.environment }}-${{ matrix.service.name }}
-      environment: ${{ needs.generate-matrix.outputs.environment }}
+      - uses: ./.github/actions/setup-workspace
 
-  # Deploy lambdas using matrix
+      - name: Build & Test (affected only)
+        run: pnpm turbo run build test --filter='...[HEAD~1]'
+
+  # Deploy Lambda functions
   deploy-lambdas:
-    needs: [generate-matrix, tests]
-    if: needs.generate-matrix.outputs.has-lambdas == 'true' && (needs.tests.result == 'success' || needs.tests.result == 'skipped')
+    needs: [setup, build-and-test]
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        service: ${{ fromJSON(needs.generate-matrix.outputs.lambdas) }}
-    uses: ./.github/workflows/_deploy-lambda.yml
-    secrets: inherit
-    with:
-      wrapper-name: ${{ matrix.service.wrapper }}
-      function-name: weft-${{ needs.generate-matrix.outputs.environment }}-${{ matrix.service.function }}
-      environment: ${{ needs.generate-matrix.outputs.environment }}
+        lambda:
+          - name: dispatcher
+            wrapper: dispatcher-lambda
+          - name: liquidator
+            wrapper: liquidator-lambda
+          - name: oracle-updater
+            wrapper: price-updater-lambda
+    steps:
+      - uses: actions/checkout@v4
+      - uses: ./.github/actions/setup-workspace
+
+      - name: Bundle ${{ matrix.lambda.name }}
+        run: pnpm turbo run bundle --filter=@local-wrapper/${{ matrix.lambda.wrapper }}
+
+      - name: Package
+        run: cd aws-wrappers/${{ matrix.lambda.wrapper }} && zip -r lambda.zip dist
+
+      - name: Configure AWS
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/weft-github-actions-role
+          aws-region: us-east-1
+
+      - name: Deploy
+        run: |
+          aws lambda update-function-code \
+            --function-name "weft-${{ needs.setup.outputs.environment }}-${{ matrix.lambda.name }}" \
+            --zip-file "fileb://aws-wrappers/${{ matrix.lambda.wrapper }}/lambda.zip"
+
+  # Build and deploy container
+  deploy-indexer:
+    needs: [setup, build-and-test]
+    runs-on: ubuntu-24.04-arm
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Configure AWS
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/weft-github-actions-role
+          aws-region: us-east-1
+
+      - name: Login to ECR
+        run: |
+          aws ecr get-login-password --region us-east-1 \
+            | docker login --username AWS --password-stdin "${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.us-east-1.amazonaws.com"
+
+      - name: Build and Push
+        run: |
+          IMAGE="${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.us-east-1.amazonaws.com/weft-indexer"
+          docker buildx build \
+            --platform linux/arm64 \
+            -t "${IMAGE}:${{ github.sha }}" \
+            -t "${IMAGE}:latest" \
+            -f aws-wrappers/indexer-container/Dockerfile \
+            --push .
+
+      - name: Deploy to ECS
+        run: |
+          aws ecs update-service \
+            --cluster "weft-${{ needs.setup.outputs.environment }}-cluster" \
+            --service "weft-${{ needs.setup.outputs.environment }}-indexer" \
+            --force-new-deployment
